--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@mui/material-nextjs": "^7.3.2",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.57.4",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
